@@ -4,6 +4,7 @@ Users which contributed patches added to versions after 1.0:
 * CliffordAdams
 * Christoph Berg (cb@df7cb.de)
 * MikeCastle
+* DavidClaughton
 * BrianHunter
 * RichardP
 * GyPark
