@@ -20,6 +20,8 @@ Changes for bugfix release 1.0.2:
 * fixed bug ImageExtensionsCaseSensitive aka
   UppercaseImageUploadCausesProblemsWithDisplay
 * added ico/tif/tiff to ImageExtensions
+* fixed bug CamelCaseImageUploadCausesProblemsWithDisplay
+  with suggestion from DavidClaughton
 
 Changes for bugfix release 1.0.1 (July 9, 2007):
 
